# trilobite

./: .gitignore  LICENSE  README.md  marketservice.py  pyproject.toml  trilobite.py
analysis/: ai_model.py  analysis_tools.py  stockobject.py  visualizations.py
data/processed/: .testfile
docs/: App_initialization.puml  App_run.puml  command_updateall.puml  usecase.puml
scraping/: parsers.py  scraper.py
scripts/: setup.py
src/trilobite/: __init__.py  __main__.py  app.py
src/trilobite/analysis/: __init__.py  dataset.py  datasource.py  factors.py  features.py  settings.py
src/trilobite/analysis/trainers/: __init__.py  base.py  nn_direction.py
src/trilobite/cli/: cli.py  clicontroller.py  cliflags.py  runtimeflags.py
src/trilobite/commands/: __init__.py  uicommands.py
src/trilobite/config/: __init__.py  config.py  load.py  models.py
src/trilobite/db/: __init__.py  connect.py  queries.py  repo.py  schema.py
src/trilobite/events/: __init__.py  uievents.py
src/trilobite/handlers/: __init__.py  uihandlers.py
src/trilobite/logging/: __init__.py  setup.py
src/trilobite/marketdata/: __init__.py  client.py  marketservice.py  tickerservice.py  yfclient.py
src/trilobite/state/: __init__.py  state.py
src/trilobite/tickers/: __init__.py  tickerclient.py  tickerservice.py
src/trilobite/tui/: renderer.py  uicommands.py  uicontroller.py
src/trilobite/ui/: __init__.py
src/trilobite/ui/cli/: __init__.py  clicontroller.py
src/trilobite/utils/: paths.py  utils.py
tests/: test_analysis.py  test_scraping.py  test_utils.py
utils/: helpers.py
(+2 files in other folders)
